--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
 
-        <div class="footer-media">
+            <div class="footer-media">
+
             <p class="footer-text footer-text-second">Social media</p>
             <ul class="footer-list">
                 <li class="footer-item">
@@ -456,8 +457,85 @@
             </ul>
         </div>
 
+        <div class="form-footer-block">
+            <form class="form-footer">
+                <label class="form-footer-label">Subscribe
+                    <input class="form-footer-input" type="email" name="email" placeholder="E-mail" required>
+                </label>
+                    <button class="form-footer-btn" type="submit">Subscribe
+                            <svg class="form-footer-icon" width="24" height="24" aria-label="icon email">
+                                <use href="./images/icons.svg#icon-frame"></use>
+                            </svg>
+                    </button>
+                
+            </form>
+        </div>
+
         </div>
         
     </footer>
+
+    <div class="backdrop is-open">
+        <div class="modal">
+            <button class="modal-close-btn">
+            <svg class="modal-close-btn-icon" width="8" height="8" aria-label="close modal icon">
+                <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+            </button>
+            <p class="review-form-description">Leave your contacts and we will call you back</p>
+
+            <form class="review-form">
+                <div class="review-form-field-wrapper">
+                    <label class="review-form-field-label" for="user-name">Name</label>
+                        <div class="review-form-input-wrapper">
+                            <input class="review-form-input" id="user-name" name="user-name" type="text" pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐʼ]+" title="Oleg" required>
+                            <svg class="review-form-input-icon" width="18" height="18" aria-label="icon user">
+                                <use href="./images/icons.svg#icon-person"></use>
+                            </svg>
+                        </div>
+                </div>
+
+                <div class="review-form-field-wrapper">
+                    <label class="review-form-field-label" for="user-tel" >Phone</label>
+                        <div class="review-form-input-wrapper">
+                            <input class="review-form-input" id="user-tel" name="user-tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" required>
+                            <svg class="review-form-input-icon" width="18" height="24" aria-label="icon phone">
+                                <use href="./images/icons.svg#icon-phone"></use>
+                            </svg>
+                        </div>
+                </div>
+
+            <div class="review-form-field-wrapper">
+                <label class="review-form-field-label" for="user-email">Email</label>
+                    <div class="review-form-input-wrapper">
+                        <input class="review-form-input" id="user-email" name="user-email" type="email" required>
+                        <svg class="review-form-input-icon" width="18" height="24" aria-label="icon email">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </div>
+            </div>
+
+            <div class="review-form-field-wrapper">
+                    <label class="review-form-field-label" for="user-comment">Comment</label>
+                        <textarea class="review-form-comment" id="user-comment" name="user-comment" placeholder="Text input" required></textarea>
+            </div>
+
+            <div class="review-form-checkbox-wrapper">
+                <input class="review-form-checkbox visually-hidden" id="user-privacy-policy" name="user-privacy-policy" type="checkbox" value="true" required>
+                    <label class="review-form-checkbox-label" for="user-privacy-policy">
+                        <span class="review-form-own-checkbox">
+                            <svg class="review-form-own-checkbox-icon" width="16" height="16" aria-label="checkmark icon">
+                                <use href="./images/icons.svg#icon-checkbox"></use>
+                            </svg>
+                        </span>
+                    I accept the terms and conditions of the
+                        <a class="accent-color" href="">Privacy Policy</a>
+                    </label>
+            </div>
+            <button class="review-form-submit-btn" type="submit">Send</button>
+            </form>
+        </div>
+        </div>
+
 </body>
 </html>
