--- a/index.html
+++ b/index.html
@@ -456,12 +456,13 @@
                 </li>
             </ul>
         </div>
+        </div>
 
         <div class="form-footer-block">
             
                 <p class="form-footer-p">Subscribe</p>
 
-                <form class="form-footer"></form>
+                <form class="form-footer">
                 <label class="form-footer-label">
                     <input class="form-footer-input" type="email" name="email" placeholder="E-mail" required>
                 </label>
