--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             <div class="review-form-field-wrapper">
                 <label class="review-form-field-label" for="user-email">Email</label>
                     <div class="review-form-input-wrapper">
-                        <input class="review-form-input" href="" id="user-email" name="user-email" type="email" required>
+                        <input class="review-form-input" id="user-email" name="user-email" type="email" required>
                         <svg class="review-form-input-icon" width="18" height="24" aria-label="icon email">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
